[gd_scene load_steps=11 format=3 uid="uid://fx8rdv6hb4q0"]

[ext_resource type="Script" path="res://Enemy/Boar.gd" id="1_fhu7v"]
[ext_resource type="PackedScene" uid="uid://dj6ps0qmbvxvw" path="res://Assets/BlenderObjs/boaring_12345.tscn" id="2_snxit"]
[ext_resource type="Script" path="res://Scripts/StateMachine/BoarStateMachine.gd" id="2_v7o4j"]
[ext_resource type="Script" path="res://Enemy/BoarStateScripts/ChargeBoarState.gd" id="3_47jjt"]
[ext_resource type="Script" path="res://Enemy/BoarStateScripts/IdleBoarState.gd" id="4_2yi5o"]
[ext_resource type="Script" path="res://Enemy/BoarStateScripts/DeathBoarState.gd" id="5_t6lul"]
[ext_resource type="Script" path="res://Enemy/BoarStateScripts/CooldownBoarState.gd" id="6_7u3gd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_12u5d"]
size = Vector3(1.01074, 1.43512, 2.37631)

[sub_resource type="BoxShape3D" id="BoxShape3D_6ewwl"]
size = Vector3(1, 1.41696, 2.389)

[sub_resource type="SphereShape3D" id="SphereShape3D_fgmj5"]
radius = 0.41331

[node name="Boar" type="CharacterBody3D" groups=["Boar", "Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.155127, 0)
collision_layer = 4
collision_mask = 163
script = ExtResource("1_fhu7v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00562225, 0.856441, 0.104691)
shape = SubResource("BoxShape3D_12u5d")

[node name="Mesh" parent="CollisionShape3D" instance=ExtResource("2_snxit")]
transform = Transform3D(-2.62268e-08, 0, -0.6, 0, 0.6, 0, 0.6, 0, -2.62268e-08, 0, -0.67915, -2.392)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="BoarStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("2_v7o4j")
CURRENT_STATE = NodePath("IdleBoarState")

[node name="ChargeBoarState" type="Node" parent="BoarStateMachine"]
script = ExtResource("3_47jjt")

[node name="IdleBoarState" type="Node" parent="BoarStateMachine"]
script = ExtResource("4_2yi5o")

[node name="DeathBoarState" type="Node" parent="BoarStateMachine"]
script = ExtResource("5_t6lul")

[node name="CooldownBoarState" type="Node" parent="BoarStateMachine"]
script = ExtResource("6_7u3gd")

[node name="DamageHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.345, 0.12)
collision_layer = 64
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.512982, 0)
shape = SubResource("BoxShape3D_6ewwl")

[node name="ChargeHitbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 130

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChargeHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00276483, 0.873674, 1.45497)
shape = SubResource("SphereShape3D_fgmj5")

[node name="ChargeCooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_area_entered"]
[connection signal="body_entered" from="ChargeHitbox" to="." method="_on_charge_hitbox_body_entered"]
[connection signal="timeout" from="ChargeCooldownTimer" to="BoarStateMachine/CooldownBoarState" method="_on_charge_cooldown_timer_timeout"]
